// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MobileWorkingWorkOrder component with multiple operatives when has status Completed should render work order elements with Status Completed and operatives list 1`] = `
<DocumentFragment>
  <div
    class="mobile-working-title-banner"
  >
    <h2
      class="lbh-heading-h2"
    >
      Friday 3 September
      <br />
      08:00 – 13:00
    </h2>
  </div>
  <div
    class="govuk-!-margin-top-4"
  >
    <a
      class="govuk-back-link lbh-back-link govuk-!-display-none-print"
      role="button"
    >
      Back
    </a>
  </div>
  <form>
    <div
      class="operative-work-order"
    >
      <h1
        class="lbh-heading-h1"
      >
        WO 10000621
      </h1>
      <div>
        <span
          class="govuk-tag lbh-tag lbh-tag--status-completed lbh-body-xs work-order-status"
        >
          Completed
        </span>
      </div>
      <br />
      <div
        class="priority-text govuk-!-margin-top-0"
      >
        <h3
          class="lbh-heading-h3"
        >
           normal
        </h3>
      </div>
      <h4
        class="lbh-heading-h4"
      >
        Description
      </h4>
      <p
        class="govuk-body govuk-!-margin-bottom-0 truncate-description truncate-line-3"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <div
        class="work-order-information"
      >
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Address
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              16 Pitcairn House  St Thomass Square E9 6PT
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Contact
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              Test Testerson
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Telephone no
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              <a
                class="lbh-link"
                href="tel:14107700900000"
                id="telephone-no"
              >
                07700900000
              </a>
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Comment
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              School run
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="operative-work-order-task-and-sors-table"
    >
      <h2
        class="lbh-heading-h2"
      >
        Tasks and SORs
      </h2>
      <table
        class="govuk-table lbh-table latest-tasks-and-sors-table govuk-!-margin-top-0"
      >
        <thead
          class="govuk-table__head"
        >
          <tr
            class="govuk-table__row lbh-body"
          >
            <th
              class="govuk-table__header"
              scope="col"
            >
              Qty
            </th>
            <th
              class="govuk-table__header"
              scope="col"
            >
              SOR
            </th>
            <th
              class="govuk-table__header"
              scope="col"
            >
              Description
            </th>
            <th
              class="govuk-table__header govuk-table__header--numeric"
              scope="col"
            >
              SMV
            </th>
          </tr>
        </thead>
        <tbody
          class="govuk-table__body"
        >
          <tr
            class="govuk-table__row lbh-body"
            data-row-id="0"
          >
            <td
              class="govuk-table__cell"
            >
              2
            </td>
            <td
              class="govuk-table__cell"
            >
              DES5R006
            </td>
            <td
              class="govuk-table__cell"
            >
              Urgent call outs
            </td>
            <td
              class="govuk-table__cell govuk-table__cell--numeric"
            >
              30
            </td>
          </tr>
        </tbody>
      </table>
      <h3
        class="lbh-heading-h3 background-wrap-color"
      >
        SMV total 30
      </h3>
      <br />
    </div>
    <h4
      class="lbh-heading-h4"
    >
      Operatives
    </h4>
    <ol
      class="govuk-list govuk-!-margin-top-6 govuk-!-margin-bottom-9"
    >
      <li>
        Test1 - 50%
      </li>
      <li>
        Test2 - 50%
      </li>
    </ol>
    <h4
      class="lbh-heading-h4"
    >
      Status
    </h4>
    <span
      class="govuk-tag lbh-tag lbh-tag--status-completed work-order-status govuk-!-margin-top-2"
    >
      Completed
    </span>
    <br />
  </form>
</DocumentFragment>
`;

exports[`MobileWorkingWorkOrder component with multiple operatives when has status In Progress should render work order elements with an Update operative link 1`] = `
<DocumentFragment>
  <div
    class="mobile-working-title-banner"
  >
    <h2
      class="lbh-heading-h2"
    >
      Friday 3 September
      <br />
      08:00 – 13:00
    </h2>
  </div>
  <div
    class="govuk-!-margin-top-4"
  >
    <a
      class="govuk-back-link lbh-back-link govuk-!-display-none-print"
      role="button"
    >
      Back
    </a>
  </div>
  <form>
    <div
      class="operative-work-order"
    >
      <h1
        class="lbh-heading-h1"
      >
        WO 10000621
      </h1>
      <div>
        <span
          class="govuk-tag lbh-tag lbh-tag--status-in-progress lbh-body-xs work-order-status"
        >
          In progress
        </span>
      </div>
      <br />
      <div
        class="priority-text govuk-!-margin-top-0"
      >
        <h3
          class="lbh-heading-h3"
        >
           normal
        </h3>
      </div>
      <h4
        class="lbh-heading-h4"
      >
        Description
      </h4>
      <p
        class="govuk-body govuk-!-margin-bottom-0 truncate-description truncate-line-3"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <div
        class="work-order-information"
      >
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Address
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              16 Pitcairn House  St Thomass Square E9 6PT
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Contact
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              Test Testerson
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Telephone no
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              <a
                class="lbh-link"
                href="tel:14107700900000"
                id="telephone-no"
              >
                07700900000
              </a>
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Comment
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              School run
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="operative-work-order-task-and-sors-table"
    >
      <h2
        class="lbh-heading-h2"
      >
        Tasks and SORs
      </h2>
      <table
        class="govuk-table lbh-table latest-tasks-and-sors-table govuk-!-margin-top-0"
      >
        <thead
          class="govuk-table__head"
        >
          <tr
            class="govuk-table__row lbh-body"
          >
            <th
              class="govuk-table__header"
              scope="col"
            >
              Qty
            </th>
            <th
              class="govuk-table__header"
              scope="col"
            >
              SOR
            </th>
            <th
              class="govuk-table__header"
              scope="col"
            >
              Description
            </th>
            <th
              class="govuk-table__header govuk-table__header--numeric"
              scope="col"
            >
              SMV
            </th>
          </tr>
        </thead>
        <tbody
          class="govuk-table__body"
        >
          <tr
            class="govuk-table__row lbh-body"
            data-row-id="0"
          >
            <td
              class="govuk-table__cell"
            >
              2
            </td>
            <td
              class="govuk-table__cell"
            >
              <a
                class="govuk-link"
                href="/work-orders/10000621/tasks/ade7c53b-8947-414c-b88f-9c5e3d875cbf/edit"
              >
                DES5R006
              </a>
            </td>
            <td
              class="govuk-table__cell"
            >
              <a
                class="govuk-link"
                href="/work-orders/10000621/tasks/ade7c53b-8947-414c-b88f-9c5e3d875cbf/edit"
              >
                Urgent call outs
              </a>
            </td>
            <td
              class="govuk-table__cell govuk-table__cell--numeric"
            >
              30
            </td>
          </tr>
        </tbody>
      </table>
      <h3
        class="lbh-heading-h3 background-wrap-color"
      >
        SMV total 30
      </h3>
      <br />
    </div>
    <div
      class="govuk-form-group lbh-form-group"
    >
      <legend
        class="govuk-fieldset__legend govuk-fieldset__legend--s"
      >
        Payment type 
      </legend>
      <span
        class="govuk-hint lbh-hint"
        id="paymentType-hint"
      />
      <div
        class="govuk-radios lbh-radios"
      >
        <div
          class="govuk-radios__item"
        >
          <input
            checked=""
            class="govuk-radios__input"
            data-testid="paymentType"
            id="paymentType_Bonus"
            name="paymentType"
            type="radio"
            value="Bonus"
          />
          <label
            class="govuk-label lbh-label govuk-radios__label"
            for="paymentType_Bonus"
          >
            Bonus calculation
          </label>
        </div>
        <div
          class="govuk-radios__item"
        >
          <input
            aria-describedby="paymentType-overtime-hint"
            class="govuk-radios__input"
            data-testid="paymentType"
            id="paymentType_Overtime"
            name="paymentType"
            type="radio"
            value="Overtime"
          />
          <label
            class="govuk-label lbh-label govuk-radios__label"
            for="paymentType_Overtime"
          >
            Overtime work order
          </label>
          <span
            class="govuk-hint govuk-radios__hint"
            id="paymentType-overtime-hint"
          >
            SMVs not included in Bonus
          </span>
        </div>
      </div>
    </div>
    <div
      class="govuk-!-margin-top-0"
    >
      <a
        class="govuk-button govuk-secondary lbh-button lbh-button--secondary"
        data-module="govuk-button"
        draggable="false"
        href="/work-orders/10000621/tasks/new"
        role="button"
      >
        Add new SOR
      </a>
    </div>
    <h4
      class="lbh-heading-h4"
    >
      Operatives
    </h4>
    <ol
      class="govuk-list govuk-!-margin-top-6 govuk-!-margin-bottom-9"
    >
      <li>
        <a
          class="govuk-link"
          href="/work-orders/10000621/operatives/edit"
        >
          Test1 - 50%
        </a>
      </li>
      <li>
        <a
          class="govuk-link"
          href="/work-orders/10000621/operatives/edit"
        >
          Test2 - 50%
        </a>
      </li>
    </ol>
    <div
      class="govuk-!-margin-top-0"
    >
      <a
        class="govuk-button govuk-secondary lbh-button lbh-button--secondary"
        data-module="govuk-button"
        draggable="false"
        href="/work-orders/10000621/operatives/edit"
        role="button"
      >
        Update operatives
      </a>
    </div>
    <div
      class="govuk-form-group lbh-form-group"
    >
      <button
        class="govuk-button lbh-button"
        data-module="govuk-button"
        type="button"
      >
        Start my job
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`MobileWorkingWorkOrder component with single operative when has status Completed and work is overtime should render work order elements with Status Completed 1`] = `
<DocumentFragment>
  <div
    class="mobile-working-title-banner"
  >
    <h2
      class="lbh-heading-h2"
    >
      Friday 3 September
      <br />
      08:00 – 13:00
    </h2>
  </div>
  <div
    class="govuk-!-margin-top-4"
  >
    <a
      class="govuk-back-link lbh-back-link govuk-!-display-none-print"
      role="button"
    >
      Back
    </a>
  </div>
  <form>
    <div
      class="operative-work-order"
    >
      <h1
        class="lbh-heading-h1"
      >
        WO 10000621
      </h1>
      <div>
        <span
          class="govuk-tag lbh-tag lbh-tag--status-completed lbh-body-xs work-order-status"
        >
          Completed
        </span>
      </div>
      <br />
      <div
        class="priority-text govuk-!-margin-top-0"
      >
        <h3
          class="lbh-heading-h3"
        >
           normal
        </h3>
      </div>
      <h4
        class="lbh-heading-h4"
      >
        Description
      </h4>
      <p
        class="govuk-body govuk-!-margin-bottom-0 truncate-description truncate-line-3"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <div
        class="work-order-information"
      >
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Address
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              16 Pitcairn House  St Thomass Square E9 6PT
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Contact
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              Test Testerson
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Telephone no
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              <a
                class="lbh-link"
                href="tel:14107700900000"
                id="telephone-no"
              >
                07700900000
              </a>
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Comment
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              School run
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="operative-work-order-task-and-sors-table"
    >
      <h2
        class="lbh-heading-h2"
      >
        Tasks and SORs
      </h2>
      <table
        class="govuk-table lbh-table latest-tasks-and-sors-table govuk-!-margin-top-0"
      >
        <thead
          class="govuk-table__head"
        >
          <tr
            class="govuk-table__row lbh-body"
          >
            <th
              class="govuk-table__header"
              scope="col"
            >
              Qty
            </th>
            <th
              class="govuk-table__header"
              scope="col"
            >
              SOR
            </th>
            <th
              class="govuk-table__header"
              scope="col"
            >
              Description
            </th>
            <th
              class="govuk-table__header govuk-table__header--numeric"
              scope="col"
            >
              SMV
            </th>
          </tr>
        </thead>
        <tbody
          class="govuk-table__body"
        >
          <tr
            class="govuk-table__row lbh-body"
            data-row-id="0"
          >
            <td
              class="govuk-table__cell"
            >
              2
            </td>
            <td
              class="govuk-table__cell"
            >
              DES5R006
            </td>
            <td
              class="govuk-table__cell"
            >
              Urgent call outs
            </td>
            <td
              class="govuk-table__cell govuk-table__cell--numeric"
            >
              30
            </td>
          </tr>
        </tbody>
      </table>
      <h3
        class="lbh-heading-h3 background-wrap-color"
      >
        SMV total 30
      </h3>
      <br />
    </div>
    <h4
      class="lbh-heading-h4"
    >
      Overtime work order
    </h4>
    <h4
      class="lbh-heading-h4"
    >
      Status
    </h4>
    <span
      class="govuk-tag lbh-tag lbh-tag--status-completed work-order-status govuk-!-margin-top-2"
    >
      Completed
    </span>
    <br />
  </form>
</DocumentFragment>
`;

exports[`MobileWorkingWorkOrder component with single operative when has status In Progress should render work order elements when unvaried without a variation textbox 1`] = `
<DocumentFragment>
  <div
    class="mobile-working-title-banner"
  >
    <h2
      class="lbh-heading-h2"
    >
      Friday 3 September
      <br />
      08:00 – 13:00
    </h2>
  </div>
  <div
    class="govuk-!-margin-top-4"
  >
    <a
      class="govuk-back-link lbh-back-link govuk-!-display-none-print"
      role="button"
    >
      Back
    </a>
  </div>
  <form>
    <div
      class="operative-work-order"
    >
      <h1
        class="lbh-heading-h1"
      >
        WO 10000621
      </h1>
      <div>
        <span
          class="govuk-tag lbh-tag lbh-tag--status-in-progress lbh-body-xs work-order-status"
        >
          In progress
        </span>
      </div>
      <br />
      <div
        class="priority-text govuk-!-margin-top-0"
      >
        <h3
          class="lbh-heading-h3"
        >
           normal
        </h3>
      </div>
      <h4
        class="lbh-heading-h4"
      >
        Description
      </h4>
      <p
        class="govuk-body govuk-!-margin-bottom-0 truncate-description truncate-line-3"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <div
        class="work-order-information"
      >
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Address
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              16 Pitcairn House  St Thomass Square E9 6PT
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Contact
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              Test Testerson
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Telephone no
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              <a
                class="lbh-link"
                href="tel:14107700900000"
                id="telephone-no"
              >
                07700900000
              </a>
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Comment
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              School run
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="operative-work-order-task-and-sors-table"
    >
      <h2
        class="lbh-heading-h2"
      >
        Tasks and SORs
      </h2>
      <table
        class="govuk-table lbh-table latest-tasks-and-sors-table govuk-!-margin-top-0"
      >
        <thead
          class="govuk-table__head"
        >
          <tr
            class="govuk-table__row lbh-body"
          >
            <th
              class="govuk-table__header"
              scope="col"
            >
              Qty
            </th>
            <th
              class="govuk-table__header"
              scope="col"
            >
              SOR
            </th>
            <th
              class="govuk-table__header"
              scope="col"
            >
              Description
            </th>
            <th
              class="govuk-table__header govuk-table__header--numeric"
              scope="col"
            >
              SMV
            </th>
          </tr>
        </thead>
        <tbody
          class="govuk-table__body"
        >
          <tr
            class="govuk-table__row lbh-body"
            data-row-id="0"
          >
            <td
              class="govuk-table__cell"
            >
              2
            </td>
            <td
              class="govuk-table__cell"
            >
              <a
                class="govuk-link"
                href="/work-orders/10000621/tasks/ade7c53b-8947-414c-b88f-9c5e3d875cbf/edit"
              >
                DES5R006
              </a>
            </td>
            <td
              class="govuk-table__cell"
            >
              <a
                class="govuk-link"
                href="/work-orders/10000621/tasks/ade7c53b-8947-414c-b88f-9c5e3d875cbf/edit"
              >
                Urgent call outs
              </a>
            </td>
            <td
              class="govuk-table__cell govuk-table__cell--numeric"
            >
              30
            </td>
          </tr>
        </tbody>
      </table>
      <h3
        class="lbh-heading-h3 background-wrap-color"
      >
        SMV total 30
      </h3>
      <br />
    </div>
    <div
      class="govuk-!-margin-top-0"
    >
      <a
        class="govuk-button govuk-secondary lbh-button lbh-button--secondary"
        data-module="govuk-button"
        draggable="false"
        href="/work-orders/10000621/tasks/new"
        role="button"
      >
        Add new SOR
      </a>
    </div>
    <div
      class="govuk-!-margin-top-0"
    >
      <a
        class="govuk-button govuk-secondary lbh-button lbh-button--secondary"
        data-module="govuk-button"
        draggable="false"
        href="/work-orders/10000621/operatives/new"
        role="button"
      >
        Add operatives
      </a>
    </div>
    <div
      class="govuk-form-group lbh-form-group"
    >
      <button
        class="govuk-button lbh-button"
        data-module="govuk-button"
        type="button"
      >
        Start my job
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`MobileWorkingWorkOrder component with single operative when has status In Progress should render work order elements with a form and variation reason when an SOR is added 1`] = `
<DocumentFragment>
  <div
    class="mobile-working-title-banner"
  >
    <h2
      class="lbh-heading-h2"
    >
      Friday 3 September
      <br />
      08:00 – 13:00
    </h2>
  </div>
  <div
    class="govuk-!-margin-top-4"
  >
    <a
      class="govuk-back-link lbh-back-link govuk-!-display-none-print"
      role="button"
    >
      Back
    </a>
  </div>
  <form>
    <div
      class="operative-work-order"
    >
      <h1
        class="lbh-heading-h1"
      >
        WO 10000621
      </h1>
      <div>
        <span
          class="govuk-tag lbh-tag lbh-tag--status-in-progress lbh-body-xs work-order-status"
        >
          In progress
        </span>
      </div>
      <br />
      <div
        class="priority-text govuk-!-margin-top-0"
      >
        <h3
          class="lbh-heading-h3"
        >
           normal
        </h3>
      </div>
      <h4
        class="lbh-heading-h4"
      >
        Description
      </h4>
      <p
        class="govuk-body govuk-!-margin-bottom-0 truncate-description truncate-line-3"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <div
        class="work-order-information"
      >
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Address
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              16 Pitcairn House  St Thomass Square E9 6PT
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Contact
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              Test Testerson
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Telephone no
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              <a
                class="lbh-link"
                href="tel:14107700900000"
                id="telephone-no"
              >
                07700900000
              </a>
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Comment
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              School run
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="operative-work-order-task-and-sors-table"
    >
      <h2
        class="lbh-heading-h2"
      >
        Tasks and SORs
      </h2>
      <table
        class="govuk-table lbh-table latest-tasks-and-sors-table govuk-!-margin-top-0"
      >
        <thead
          class="govuk-table__head"
        >
          <tr
            class="govuk-table__row lbh-body"
          >
            <th
              class="govuk-table__header"
              scope="col"
            >
              Qty
            </th>
            <th
              class="govuk-table__header"
              scope="col"
            >
              SOR
            </th>
            <th
              class="govuk-table__header"
              scope="col"
            >
              Description
            </th>
            <th
              class="govuk-table__header govuk-table__header--numeric"
              scope="col"
            >
              SMV
            </th>
          </tr>
        </thead>
        <tbody
          class="govuk-table__body"
        >
          <tr
            class="govuk-table__row lbh-body"
            data-row-id="0"
          >
            <td
              class="govuk-table__cell"
            >
              4
            </td>
            <td
              class="govuk-table__cell"
            >
              <a
                class="govuk-link"
                href="/work-orders/10000621/tasks/bde7c53b-8947-414c-b88f-9c5e3d875cbg/edit"
              >
                DES5R005
              </a>
            </td>
            <td
              class="govuk-table__cell"
            >
              <a
                class="govuk-link"
                href="/work-orders/10000621/tasks/bde7c53b-8947-414c-b88f-9c5e3d875cbg/edit"
              >
                Normal call outs
              </a>
            </td>
            <td
              class="govuk-table__cell govuk-table__cell--numeric"
            >
              60
            </td>
          </tr>
          <tr
            class="govuk-table__row lbh-body"
            data-row-id="1"
          >
            <td
              class="govuk-table__cell"
            >
              1
            </td>
            <td
              class="govuk-table__cell"
            >
              <a
                class="govuk-link"
                href="/work-orders/10000621/tasks/ade7c53b-8947-414c-b88f-9c5e3d875cbf/edit"
              >
                DES5R006
              </a>
            </td>
            <td
              class="govuk-table__cell"
            >
              <a
                class="govuk-link"
                href="/work-orders/10000621/tasks/ade7c53b-8947-414c-b88f-9c5e3d875cbf/edit"
              >
                Urgent call outs
              </a>
            </td>
            <td
              class="govuk-table__cell govuk-table__cell--numeric"
            >
              15
            </td>
          </tr>
        </tbody>
      </table>
      <h3
        class="lbh-heading-h3 background-wrap-color"
      >
        SMV total 75
      </h3>
      <br />
    </div>
    <div
      class="govuk-form-group lbh-form-group"
      id="variationReason-form-group"
    >
      <label
        class="govuk-label lbh-label"
        for="variationReason"
      >
        Variation reason
        <span
          class="govuk-required"
        >
          *
        </span>
      </label>
      <textarea
        aria-describedby="variationReason-hint variationReason-error"
        class="govuk-textarea lbh-textarea"
        data-testid="variationReason"
        id="variationReason"
        name="variationReason"
        placeholder="Write a reason for the variation..."
        rows="4"
      />
    </div>
    <span
      aria-live="polite"
      class="govuk-hint govuk-character-count__message"
    >
      You have 250 characters remaining.
    </span>
    <div
      class="govuk-!-margin-top-0"
    >
      <a
        class="govuk-button govuk-secondary lbh-button lbh-button--secondary"
        data-module="govuk-button"
        draggable="false"
        href="/work-orders/10000621/tasks/new"
        role="button"
      >
        Add new SOR
      </a>
    </div>
    <div
      class="govuk-!-margin-top-0"
    >
      <a
        class="govuk-button govuk-secondary lbh-button lbh-button--secondary"
        data-module="govuk-button"
        draggable="false"
        href="/work-orders/10000621/operatives/new"
        role="button"
      >
        Add operatives
      </a>
    </div>
    <div
      class="govuk-form-group lbh-form-group"
    >
      <button
        class="govuk-button lbh-button"
        data-module="govuk-button"
        type="button"
      >
        Start my job
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`MobileWorkingWorkOrder component with single operative when has status In Progress should render work order elements with a form and variation reason when an SOR is varied 1`] = `
<DocumentFragment>
  <div
    class="mobile-working-title-banner"
  >
    <h2
      class="lbh-heading-h2"
    >
      Friday 3 September
      <br />
      08:00 – 13:00
    </h2>
  </div>
  <div
    class="govuk-!-margin-top-4"
  >
    <a
      class="govuk-back-link lbh-back-link govuk-!-display-none-print"
      role="button"
    >
      Back
    </a>
  </div>
  <form>
    <div
      class="operative-work-order"
    >
      <h1
        class="lbh-heading-h1"
      >
        WO 10000621
      </h1>
      <div>
        <span
          class="govuk-tag lbh-tag lbh-tag--status-in-progress lbh-body-xs work-order-status"
        >
          In progress
        </span>
      </div>
      <br />
      <div
        class="priority-text govuk-!-margin-top-0"
      >
        <h3
          class="lbh-heading-h3"
        >
           normal
        </h3>
      </div>
      <h4
        class="lbh-heading-h4"
      >
        Description
      </h4>
      <p
        class="govuk-body govuk-!-margin-bottom-0 truncate-description truncate-line-3"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <div
        class="work-order-information"
      >
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Address
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              16 Pitcairn House  St Thomass Square E9 6PT
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Contact
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              Test Testerson
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Telephone no
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              <a
                class="lbh-link"
                href="tel:14107700900000"
                id="telephone-no"
              >
                07700900000
              </a>
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Comment
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              School run
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="operative-work-order-task-and-sors-table"
    >
      <h2
        class="lbh-heading-h2"
      >
        Tasks and SORs
      </h2>
      <table
        class="govuk-table lbh-table latest-tasks-and-sors-table govuk-!-margin-top-0"
      >
        <thead
          class="govuk-table__head"
        >
          <tr
            class="govuk-table__row lbh-body"
          >
            <th
              class="govuk-table__header"
              scope="col"
            >
              Qty
            </th>
            <th
              class="govuk-table__header"
              scope="col"
            >
              SOR
            </th>
            <th
              class="govuk-table__header"
              scope="col"
            >
              Description
            </th>
            <th
              class="govuk-table__header govuk-table__header--numeric"
              scope="col"
            >
              SMV
            </th>
          </tr>
        </thead>
        <tbody
          class="govuk-table__body"
        >
          <tr
            class="govuk-table__row lbh-body"
            data-row-id="0"
          >
            <td
              class="govuk-table__cell"
            >
              4
            </td>
            <td
              class="govuk-table__cell"
            >
              <a
                class="govuk-link"
                href="/work-orders/10000621/tasks/ade7c53b-8947-414c-b88f-9c5e3d875cbf/edit"
              >
                DES5R006
              </a>
            </td>
            <td
              class="govuk-table__cell"
            >
              <a
                class="govuk-link"
                href="/work-orders/10000621/tasks/ade7c53b-8947-414c-b88f-9c5e3d875cbf/edit"
              >
                Urgent call outs
              </a>
            </td>
            <td
              class="govuk-table__cell govuk-table__cell--numeric"
            >
              60
            </td>
          </tr>
        </tbody>
      </table>
      <h3
        class="lbh-heading-h3 background-wrap-color"
      >
        SMV total 60
      </h3>
      <br />
    </div>
    <div
      class="govuk-form-group lbh-form-group"
      id="variationReason-form-group"
    >
      <label
        class="govuk-label lbh-label"
        for="variationReason"
      >
        Variation reason
        <span
          class="govuk-required"
        >
          *
        </span>
      </label>
      <textarea
        aria-describedby="variationReason-hint variationReason-error"
        class="govuk-textarea lbh-textarea"
        data-testid="variationReason"
        id="variationReason"
        name="variationReason"
        placeholder="Write a reason for the variation..."
        rows="4"
      />
    </div>
    <span
      aria-live="polite"
      class="govuk-hint govuk-character-count__message"
    >
      You have 250 characters remaining.
    </span>
    <div
      class="govuk-!-margin-top-0"
    >
      <a
        class="govuk-button govuk-secondary lbh-button lbh-button--secondary"
        data-module="govuk-button"
        draggable="false"
        href="/work-orders/10000621/tasks/new"
        role="button"
      >
        Add new SOR
      </a>
    </div>
    <div
      class="govuk-!-margin-top-0"
    >
      <a
        class="govuk-button govuk-secondary lbh-button lbh-button--secondary"
        data-module="govuk-button"
        draggable="false"
        href="/work-orders/10000621/operatives/new"
        role="button"
      >
        Add operatives
      </a>
    </div>
    <div
      class="govuk-form-group lbh-form-group"
    >
      <button
        class="govuk-button lbh-button"
        data-module="govuk-button"
        type="button"
      >
        Start my job
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`MobileWorkingWorkOrder component with single operative when has status No Access should render work order elements with Status No Access 1`] = `
<DocumentFragment>
  <div
    class="mobile-working-title-banner"
  >
    <h2
      class="lbh-heading-h2"
    >
      Friday 3 September
      <br />
      08:00 – 13:00
    </h2>
  </div>
  <div
    class="govuk-!-margin-top-4"
  >
    <a
      class="govuk-back-link lbh-back-link govuk-!-display-none-print"
      role="button"
    >
      Back
    </a>
  </div>
  <form>
    <div
      class="operative-work-order"
    >
      <h1
        class="lbh-heading-h1"
      >
        WO 10000621
      </h1>
      <div>
        <span
          class="govuk-tag lbh-tag lbh-tag--status-no-access lbh-body-xs work-order-status"
        >
          No access
        </span>
      </div>
      <br />
      <div
        class="priority-text govuk-!-margin-top-0"
      >
        <h3
          class="lbh-heading-h3"
        >
           normal
        </h3>
      </div>
      <h4
        class="lbh-heading-h4"
      >
        Description
      </h4>
      <p
        class="govuk-body govuk-!-margin-bottom-0 truncate-description truncate-line-3"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <div
        class="work-order-information"
      >
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Address
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              16 Pitcairn House  St Thomass Square E9 6PT
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Contact
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              Test Testerson
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Telephone no
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              <a
                class="lbh-link"
                href="tel:14107700900000"
                id="telephone-no"
              >
                07700900000
              </a>
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Comment
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              School run
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="operative-work-order-task-and-sors-table"
    >
      <h2
        class="lbh-heading-h2"
      >
        Tasks and SORs
      </h2>
      <table
        class="govuk-table lbh-table latest-tasks-and-sors-table govuk-!-margin-top-0"
      >
        <thead
          class="govuk-table__head"
        >
          <tr
            class="govuk-table__row lbh-body"
          >
            <th
              class="govuk-table__header"
              scope="col"
            >
              Qty
            </th>
            <th
              class="govuk-table__header"
              scope="col"
            >
              SOR
            </th>
            <th
              class="govuk-table__header"
              scope="col"
            >
              Description
            </th>
            <th
              class="govuk-table__header govuk-table__header--numeric"
              scope="col"
            >
              SMV
            </th>
          </tr>
        </thead>
        <tbody
          class="govuk-table__body"
        >
          <tr
            class="govuk-table__row lbh-body"
            data-row-id="0"
          >
            <td
              class="govuk-table__cell"
            >
              2
            </td>
            <td
              class="govuk-table__cell"
            >
              DES5R006
            </td>
            <td
              class="govuk-table__cell"
            >
              Urgent call outs
            </td>
            <td
              class="govuk-table__cell govuk-table__cell--numeric"
            >
              30
            </td>
          </tr>
        </tbody>
      </table>
      <h3
        class="lbh-heading-h3 background-wrap-color"
      >
        SMV total 30
      </h3>
      <br />
    </div>
    <h4
      class="lbh-heading-h4"
    >
      Overtime work order
    </h4>
    <h4
      class="lbh-heading-h4"
    >
      Status
    </h4>
    <span
      class="govuk-tag lbh-tag lbh-tag--status-no-access work-order-status govuk-!-margin-top-2"
    >
      No access
    </span>
    <br />
  </form>
</DocumentFragment>
`;

exports[`MobileWorkingWorkOrder component with single operative when the current time is overtime renders an overtime check box 1`] = `
<DocumentFragment>
  <div
    class="mobile-working-title-banner"
  >
    <h2
      class="lbh-heading-h2"
    >
      Friday 3 September
      <br />
      08:00 – 13:00
    </h2>
  </div>
  <div
    class="govuk-!-margin-top-4"
  >
    <a
      class="govuk-back-link lbh-back-link govuk-!-display-none-print"
      role="button"
    >
      Back
    </a>
  </div>
  <form>
    <div
      class="operative-work-order"
    >
      <h1
        class="lbh-heading-h1"
      >
        WO 10000621
      </h1>
      <div>
        <span
          class="govuk-tag lbh-tag lbh-tag--status-no-access lbh-body-xs work-order-status"
        >
          No access
        </span>
      </div>
      <br />
      <div
        class="priority-text govuk-!-margin-top-0"
      >
        <h3
          class="lbh-heading-h3"
        >
           normal
        </h3>
      </div>
      <h4
        class="lbh-heading-h4"
      >
        Description
      </h4>
      <p
        class="govuk-body govuk-!-margin-bottom-0 truncate-description truncate-line-3"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <div
        class="work-order-information"
      >
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Address
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              16 Pitcairn House  St Thomass Square E9 6PT
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Contact
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              Test Testerson
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Telephone no
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              <a
                class="lbh-link"
                href="tel:14107700900000"
                id="telephone-no"
              >
                07700900000
              </a>
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Comment
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              School run
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="operative-work-order-task-and-sors-table"
    >
      <h2
        class="lbh-heading-h2"
      >
        Tasks and SORs
      </h2>
      <table
        class="govuk-table lbh-table latest-tasks-and-sors-table govuk-!-margin-top-0"
      >
        <thead
          class="govuk-table__head"
        >
          <tr
            class="govuk-table__row lbh-body"
          >
            <th
              class="govuk-table__header"
              scope="col"
            >
              Qty
            </th>
            <th
              class="govuk-table__header"
              scope="col"
            >
              SOR
            </th>
            <th
              class="govuk-table__header"
              scope="col"
            >
              Description
            </th>
            <th
              class="govuk-table__header govuk-table__header--numeric"
              scope="col"
            >
              SMV
            </th>
          </tr>
        </thead>
        <tbody
          class="govuk-table__body"
        >
          <tr
            class="govuk-table__row lbh-body"
            data-row-id="0"
          >
            <td
              class="govuk-table__cell"
            >
              2
            </td>
            <td
              class="govuk-table__cell"
            >
              DES5R006
            </td>
            <td
              class="govuk-table__cell"
            >
              Urgent call outs
            </td>
            <td
              class="govuk-table__cell govuk-table__cell--numeric"
            >
              30
            </td>
          </tr>
        </tbody>
      </table>
      <h3
        class="lbh-heading-h3 background-wrap-color"
      >
        SMV total 30
      </h3>
      <br />
    </div>
    <h4
      class="lbh-heading-h4"
    >
      Overtime work order
    </h4>
    <h4
      class="lbh-heading-h4"
    >
      Status
    </h4>
    <span
      class="govuk-tag lbh-tag lbh-tag--status-no-access work-order-status govuk-!-margin-top-2"
    >
      No access
    </span>
    <br />
  </form>
</DocumentFragment>
`;

exports[`MobileWorkingWorkOrder component with startTime when the workOrder has been loaded should render the confirm button 1`] = `
<DocumentFragment>
  <div
    class="mobile-working-title-banner"
  >
    <h2
      class="lbh-heading-h2"
    >
      Friday 3 September
      <br />
      08:00 – 13:00
    </h2>
  </div>
  <div
    class="govuk-!-margin-top-4"
  >
    <a
      class="govuk-back-link lbh-back-link govuk-!-display-none-print"
      role="button"
    >
      Back
    </a>
  </div>
  <form>
    <div
      class="operative-work-order"
    >
      <h1
        class="lbh-heading-h1"
      >
        WO 10000621
      </h1>
      <div>
        <span
          class="govuk-tag lbh-tag lbh-tag--status-in-progress lbh-body-xs work-order-status"
        >
          In progress
        </span>
      </div>
      <br />
      <div
        class="priority-text govuk-!-margin-top-0"
      >
        <h3
          class="lbh-heading-h3"
        >
           normal
        </h3>
      </div>
      <h4
        class="lbh-heading-h4"
      >
        Description
      </h4>
      <p
        class="govuk-body govuk-!-margin-bottom-0 truncate-description truncate-line-3"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <h5
        class="lbh-heading-h5"
      >
        Started At
      </h5>
      <p
        class="govuk-body"
        data-test="startedAtValue"
      >
        11 Jun 2023, 13:49
      </p>
      <div
        class="work-order-information"
      >
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Address
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              16 Pitcairn House  St Thomass Square E9 6PT
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Contact
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              Test Testerson
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Telephone no
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              <a
                class="lbh-link"
                href="tel:14107700900000"
                id="telephone-no"
              >
                07700900000
              </a>
            </div>
          </div>
        </div>
        <div
          class="govuk-grid-row govuk-!-margin-top-0"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="lbh-body property-name"
            >
              Comment
            </div>
          </div>
          <div
            class="govuk-grid-column-one-half align-grid-column"
          >
            <div
              class="lbh-body"
            >
              School run
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="operative-work-order-task-and-sors-table"
    >
      <h2
        class="lbh-heading-h2"
      >
        Tasks and SORs
      </h2>
      <table
        class="govuk-table lbh-table latest-tasks-and-sors-table govuk-!-margin-top-0"
      >
        <thead
          class="govuk-table__head"
        >
          <tr
            class="govuk-table__row lbh-body"
          >
            <th
              class="govuk-table__header"
              scope="col"
            >
              Qty
            </th>
            <th
              class="govuk-table__header"
              scope="col"
            >
              SOR
            </th>
            <th
              class="govuk-table__header"
              scope="col"
            >
              Description
            </th>
            <th
              class="govuk-table__header govuk-table__header--numeric"
              scope="col"
            >
              SMV
            </th>
          </tr>
        </thead>
        <tbody
          class="govuk-table__body"
        >
          <tr
            class="govuk-table__row lbh-body"
            data-row-id="0"
          >
            <td
              class="govuk-table__cell"
            >
              2
            </td>
            <td
              class="govuk-table__cell"
            >
              <a
                class="govuk-link"
                href="/work-orders/10000621/tasks/ade7c53b-8947-414c-b88f-9c5e3d875cbf/edit"
              >
                DES5R006
              </a>
            </td>
            <td
              class="govuk-table__cell"
            >
              <a
                class="govuk-link"
                href="/work-orders/10000621/tasks/ade7c53b-8947-414c-b88f-9c5e3d875cbf/edit"
              >
                Urgent call outs
              </a>
            </td>
            <td
              class="govuk-table__cell govuk-table__cell--numeric"
            >
              30
            </td>
          </tr>
        </tbody>
      </table>
      <h3
        class="lbh-heading-h3 background-wrap-color"
      >
        SMV total 30
      </h3>
      <br />
    </div>
    <div
      class="govuk-form-group lbh-form-group"
    >
      <legend
        class="govuk-fieldset__legend govuk-fieldset__legend--s"
      >
        Payment type 
      </legend>
      <span
        class="govuk-hint lbh-hint"
        id="paymentType-hint"
      />
      <div
        class="govuk-radios lbh-radios"
      >
        <div
          class="govuk-radios__item"
        >
          <input
            checked=""
            class="govuk-radios__input"
            data-testid="paymentType"
            id="paymentType_Bonus"
            name="paymentType"
            type="radio"
            value="Bonus"
          />
          <label
            class="govuk-label lbh-label govuk-radios__label"
            for="paymentType_Bonus"
          >
            Bonus calculation
          </label>
        </div>
        <div
          class="govuk-radios__item"
        >
          <input
            aria-describedby="paymentType-overtime-hint"
            class="govuk-radios__input"
            data-testid="paymentType"
            id="paymentType_Overtime"
            name="paymentType"
            type="radio"
            value="Overtime"
          />
          <label
            class="govuk-label lbh-label govuk-radios__label"
            for="paymentType_Overtime"
          >
            Overtime work order
          </label>
          <span
            class="govuk-hint govuk-radios__hint"
            id="paymentType-overtime-hint"
          >
            SMVs not included in Bonus
          </span>
        </div>
      </div>
    </div>
    <div
      class="govuk-!-margin-top-0"
    >
      <a
        class="govuk-button govuk-secondary lbh-button lbh-button--secondary"
        data-module="govuk-button"
        draggable="false"
        href="/work-orders/10000621/tasks/new"
        role="button"
      >
        Add new SOR
      </a>
    </div>
    <h4
      class="lbh-heading-h4"
    >
      Operatives
    </h4>
    <ol
      class="govuk-list govuk-!-margin-top-6 govuk-!-margin-bottom-9"
    >
      <li>
        <a
          class="govuk-link"
          href="/work-orders/10000621/operatives/edit"
        >
          Test1 - 50%
        </a>
      </li>
      <li>
        <a
          class="govuk-link"
          href="/work-orders/10000621/operatives/edit"
        >
          Test2 - 50%
        </a>
      </li>
    </ol>
    <div
      class="govuk-!-margin-top-0"
    >
      <a
        class="govuk-button govuk-secondary lbh-button lbh-button--secondary"
        data-module="govuk-button"
        draggable="false"
        href="/work-orders/10000621/operatives/edit"
        role="button"
      >
        Update operatives
      </a>
    </div>
    <div
      class="govuk-form-group lbh-form-group"
    >
      <button
        class="govuk-button lbh-button"
        data-module="govuk-button"
        id="submit-work-order-details-confirm"
        type="submit"
      >
        Confirm
      </button>
    </div>
  </form>
</DocumentFragment>
`;
